リソースパック選択状態の維持